--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0",
     "webpack-pwa-manifest": "^4.3.0",
+    "mini-css-extract-plugin": "^2.7.1",
     "workbox-webpack-plugin": "^6.2.4"
   },
   "dependencies": {
